Correccion de identacion

--- a/pages/bestiario.html
+++ b/pages/bestiario.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/cthukhulog.jpg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <title>BESTIARIO</title>
 </head>
+
 <body>
     <header class="header" id="subir">
         <a href="../index.html">
@@ -20,71 +23,93 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">H.P Lovecraft</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="navbar-nav">
-                    <a class= "nav-link" href="../index.html">Inicio</a>
-                    <a class= "nav-link" href="biografia.html">Biografía</a>
-                    <a class= "nav-link" href="libros.html">Libros</a>
-                    <a class= "nav-link" href="bestiario.html">Bestiario</a>
-                    <a class= "nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                        <a class="nav-link" href="biografia.html">Biografía</a>
+                        <a class="nav-link" href="libros.html">Libros</a>
+                        <a class="nav-link" href="bestiario.html">Bestiario</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </div>
                 </div>
             </div>
-            </nav>
+        </nav>
     </header>
-    <section class="bestiario">
+    <main class="bestiario">
         <h1>Bestiario de H. P. Lovecraft</h1>
         <h2>Primigenios</h2>
-        <p>Los Primigenios son criaturas antiguas y poderosas adoradas por cultos humanos degenerados. Muchos de ellos están constituídos por sustancias extra-terrestres y poseen propiedades que no coinciden con las de la materia conocida. Su influencia es limitada y sólo puede afectar al planeta más cercano, extendiéndose un poco más allá si la alineación de las estrellas les es favorable. En esos casos, la ayuda de varios rituales es necesaria.</p>
+        <p>Los Primigenios son criaturas antiguas y poderosas adoradas por cultos humanos degenerados. Muchos de ellos
+            están constituídos por sustancias extra-terrestres y poseen propiedades que no coinciden con las de la
+            materia conocida. Su influencia es limitada y sólo puede afectar al planeta más cercano, extendiéndose un
+            poco más allá si la alineación de las estrellas les es favorable. En esos casos, la ayuda de varios rituales
+            es necesaria.</p>
 
-    <ul>
-        <li>Azathoth</li>
-        <p>El Sultán Demoníaco. Aparece como una vasta monstruosidad enredada de tamaño imposible. Es el líder de los Primigenios.
-            Referencias: The dream-quest of unknown Kadath (HPL), The dreams in the witch house (HPL)</p>
-        <li>Bokrug</li>
-        <p>El Gran Lagarto Acuático, la Perdición de Sarnath. Tiene la apariencia de una iguana gigante.
-            Referencias: The doom that came to Sarnath (HPL)</p>
-        <li>Cthulhu</li>
-        <p>El Dios Durmiente, Amo de R'lyeh. Un humanoide gigantesco con cabeza de cefalópodo.
-            Referencias: The call of Cthulhu (HPL)</p>
-        <li>Padre Dagon y Madre Hydra</li>
-        <p>Ambos son Profundos anormalmente grandes. Son humanoides con características intermedian entre peces y sapos.
-            Referencias: The shadow over Innsmouth (HPL)</p>
-        <li>Ghatanothoa</li>
-        <p>El Usurpador, Dios del Volcán. Amorfo, con una multitud de apéndices y miembros grotescos. Es demasiado horrible y su vista causa la petrificación.
-            Referencias: Out of Aeons (Heald & HPL)</p>
-        <li>Hastur</li>
-        <p>El Innombrable, Señor de los Espacios Interestelares. Su verdadera forma se desconoce, probablemente sea una masa amorfa con tentáculos. Frecuentemente se lo asocia con el "Rey de Amarillo" de Chambers.
-            Referencias: The whisperer in darkness (HPL), The Mound (Heald & HPL), The shadow out of time (HPL)</p>
-        <li>Nyarlathotep</li>
-        <p>El Caos Reptante, el Hombre Negro. Tiene varias apariencias. La única que no causa horror es la de un hombre negro. Otras incluyen una figura alada o un enorme tentáculo rojo.
-            Referencias: Nyarlathotep (HPL), The lurker at the threshold (Derleth & HPL)
+        <ul>
+            <li>Azathoth</li>
+            <p>El Sultán Demoníaco. Aparece como una vasta monstruosidad enredada de tamaño imposible. Es el líder de
+                los Primigenios.
+                Referencias: The dream-quest of unknown Kadath (HPL), The dreams in the witch house (HPL)</p>
+            <li>Bokrug</li>
+            <p>El Gran Lagarto Acuático, la Perdición de Sarnath. Tiene la apariencia de una iguana gigante.
+                Referencias: The doom that came to Sarnath (HPL)</p>
+            <li>Cthulhu</li>
+            <p>El Dios Durmiente, Amo de R'lyeh. Un humanoide gigantesco con cabeza de cefalópodo.
+                Referencias: The call of Cthulhu (HPL)</p>
+            <li>Padre Dagon y Madre Hydra</li>
+            <p>Ambos son Profundos anormalmente grandes. Son humanoides con características intermedian entre peces y
+                sapos.
+                Referencias: The shadow over Innsmouth (HPL)</p>
+            <li>Ghatanothoa</li>
+            <p>El Usurpador, Dios del Volcán. Amorfo, con una multitud de apéndices y miembros grotescos. Es demasiado
+                horrible y su vista causa la petrificación.
+                Referencias: Out of Aeons (Heald & HPL)</p>
+            <li>Hastur</li>
+            <p>El Innombrable, Señor de los Espacios Interestelares. Su verdadera forma se desconoce, probablemente sea
+                una masa amorfa con tentáculos. Frecuentemente se lo asocia con el "Rey de Amarillo" de Chambers.
+                Referencias: The whisperer in darkness (HPL), The Mound (Heald & HPL), The shadow out of time (HPL)</p>
+            <li>Nyarlathotep</li>
+            <p>El Caos Reptante, el Hombre Negro. Tiene varias apariencias. La única que no causa horror es la de un
+                hombre negro. Otras incluyen una figura alada o un enorme tentáculo rojo.
+                Referencias: Nyarlathotep (HPL), The lurker at the threshold (Derleth & HPL)
             </p>
-        <li>Shub-Niggurath</li>
-        <p>La Cabra Negra de los Bosques con un Millar de Retoños, la Consorte del Innombrable. Aparece como una masa negra, nubosa y horrible.
-            Referencias: The whisperer in darkness (HPL), Out of aeons (Heald & HPL), The Mound (Heald & HPL)</p>
-    </ul>
+            <li>Shub-Niggurath</li>
+            <p>La Cabra Negra de los Bosques con un Millar de Retoños, la Consorte del Innombrable. Aparece como una
+                masa negra, nubosa y horrible.
+                Referencias: The whisperer in darkness (HPL), Out of aeons (Heald & HPL), The Mound (Heald & HPL)</p>
+        </ul>
 
         <h2>Dioses Arquetípicos</h2>
-        <p>Los Dioses Arquetípicos son los rivales de los Primigenios. Muchos los consideran fuera del panteón Lovecraftiano, ya que introducen (de la mano de Derleth) la dicotomía entre el bien y el mal en la ficción de Lovecraft. Otros señalan que estos dioses se interesan tanto en la noción humana de moralidad como sus rivales y que poco les interesa la humanidad. Hypnos:Señor del Sueño. Aspecto desconocido. Y Nodens: Señor del Gran Abismo. Aparece como un hombre anciano, barbado, conduciendo un carro formado por la valva de un caracol y tirado por bestias míticas.</p>
-    </section>
+        <p>Los Dioses Arquetípicos son los rivales de los Primigenios. Muchos los consideran fuera del panteón
+            Lovecraftiano, ya que introducen (de la mano de Derleth) la dicotomía entre el bien y el mal en la ficción
+            de Lovecraft. Otros señalan que estos dioses se interesan tanto en la noción humana de moralidad como sus
+            rivales y que poco les interesa la humanidad. Hypnos:Señor del Sueño. Aspecto desconocido. Y Nodens: Señor
+            del Gran Abismo. Aparece como un hombre anciano, barbado, conduciendo un carro formado por la valva de un
+            caracol y tirado por bestias míticas.</p>
+    </main>
 
     <footer class="footer">
-    <div class="botonSubir">
-        <a class="boton-subir" href="#subir">Ir Arriba</a>
-    </div>
-    
-    <div class="redes">
-        <a class="redes-boton" href="https://twitter.com/" target="_blank"><img src="../img/logotwt.jpg" alt="Dirigirse a Twitter"></a>
-        <a class="redes-boton" href="https://youtube.com/" target="_blank"><img src="../img/logoyoutube.jpg" alt="Dirigirse a Youtube"></a>
-        <a class="redes-boton" href="https://instagram.com/" target="_blank"><img src="../img/loginst.jpg" alt="Dirigirse a Instagram"></a>
-    </div>
-    <h3 class="derechos">Martin Muñoz © 2023. Todos los derechos reservados.</h3>
+        <div class="botonSubir">
+            <a class="boton-subir" href="#subir">Ir Arriba</a>
+        </div>
 
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        <div class="redes">
+            <a class="redes-boton" href="https://twitter.com/" target="_blank"><img src="../img/logotwt.jpg"
+                    alt="Dirigirse a Twitter"></a>
+            <a class="redes-boton" href="https://youtube.com/" target="_blank"><img src="../img/logoyoutube.jpg"
+                    alt="Dirigirse a Youtube"></a>
+            <a class="redes-boton" href="https://instagram.com/" target="_blank"><img src="../img/loginst.jpg"
+                    alt="Dirigirse a Instagram"></a>
+        </div>
+        <h3 class="derechos">Martin Muñoz © 2023. Todos los derechos reservados.</h3>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
