--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/cthukhulog.jpg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <title>Biografía de H. P. Lovecraft</title>
 </head>
+
 <body>
     <header class="header" id="subir">
         <a href="../index.html">
@@ -20,54 +23,79 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">H.P Lovecraft</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="navbar-nav">
-                    <a class= "nav-link" href="../index.html">Inicio</a>
-                    <a class= "nav-link" href="biografia.html">Biografía</a>
-                    <a class= "nav-link" href="libros.html">Libros</a>
-                    <a class= "nav-link" href="bestiario.html">Bestiario</a>
-                    <a class= "nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                        <a class="nav-link" href="biografia.html">Biografía</a>
+                        <a class="nav-link" href="libros.html">Libros</a>
+                        <a class="nav-link" href="bestiario.html">Bestiario</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </div>
                 </div>
             </div>
-            </nav>
+        </nav>
     </header>
-    <section class="mainBiografia">
+    <main class="mainBiografia">
         <h1 class="tituloBiografia">Biografía de H. P. Lovecraft</h1>
         <p class="textoBiografia">
-            Howard Phillips Lovecraft nació en Providence, Rhode Island, el 20 de agosto de 1890. Creció en una familia de clase media, pero tuvo una infancia difícil debido a la salud mental de sus padres. Su padre, Winfield Scott Lovecraft, fue internado en un hospital psiquiátrico cuando tenía solo cinco años, y murió cinco años después. Su madre, Sarah Susan Phillips Lovecraft, también sufrió problemas de salud mental y fue internada en un asilo cuando Lovecraft tenía 30 años.
+            Howard Phillips Lovecraft nació en Providence, Rhode Island, el 20 de agosto de 1890. Creció en una familia
+            de clase media, pero tuvo una infancia difícil debido a la salud mental de sus padres. Su padre, Winfield
+            Scott Lovecraft, fue internado en un hospital psiquiátrico cuando tenía solo cinco años, y murió cinco años
+            después. Su madre, Sarah Susan Phillips Lovecraft, también sufrió problemas de salud mental y fue internada
+            en un asilo cuando Lovecraft tenía 30 años.
 
-Desde temprana edad, Lovecraft mostró un gran interés por la literatura y la poesía, escribiendo sus primeros versos a la edad de seis años. A lo largo de su vida, siguió escribiendo poesía y prosa, con un estilo muy particular y original que lo convertiría en uno de los grandes escritores de terror del siglo XX.
+            Desde temprana edad, Lovecraft mostró un gran interés por la literatura y la poesía, escribiendo sus
+            primeros versos a la edad de seis años. A lo largo de su vida, siguió escribiendo poesía y prosa, con un
+            estilo muy particular y original que lo convertiría en uno de los grandes escritores de terror del siglo XX.
 
-A los 18 años, Lovecraft sufrió un colapso nervioso y se retiró de la escuela, dedicando su tiempo a la escritura y la lectura. En 1913, se casó con Sonia Haft Greene, pero la pareja se separó después de solo dos años de matrimonio. Durante este tiempo, Lovecraft tuvo dificultades para publicar sus obras, lo que lo llevó a trabajar como escritor fantasma para otros autores y a escribir para revistas pulp.
+            A los 18 años, Lovecraft sufrió un colapso nervioso y se retiró de la escuela, dedicando su tiempo a la
+            escritura y la lectura. En 1913, se casó con Sonia Haft Greene, pero la pareja se separó después de solo dos
+            años de matrimonio. Durante este tiempo, Lovecraft tuvo dificultades para publicar sus obras, lo que lo
+            llevó a trabajar como escritor fantasma para otros autores y a escribir para revistas pulp.
 
-En 1917, Lovecraft comenzó a escribir historias de terror y ciencia ficción, muchas de las cuales fueron publicadas en la revista pulp "Weird Tales". Sus historias eran conocidas por su atmósfera oscura y opresiva, así como por su uso de seres sobrenaturales y dioses antiguos.
+            En 1917, Lovecraft comenzó a escribir historias de terror y ciencia ficción, muchas de las cuales fueron
+            publicadas en la revista pulp "Weird Tales". Sus historias eran conocidas por su atmósfera oscura y
+            opresiva, así como por su uso de seres sobrenaturales y dioses antiguos.
 
-Lovecraft es especialmente conocido por crear un universo ficticio llamado "Cthulhu Mythos", que incluye personajes como Cthulhu, Yog-Sothoth y Azathoth. Estos personajes se han convertido en iconos de la cultura popular y han sido adaptados en películas, videojuegos y otros medios.
+            Lovecraft es especialmente conocido por crear un universo ficticio llamado "Cthulhu Mythos", que incluye
+            personajes como Cthulhu, Yog-Sothoth y Azathoth. Estos personajes se han convertido en iconos de la cultura
+            popular y han sido adaptados en películas, videojuegos y otros medios.
 
-A pesar de que Lovecraft no fue muy reconocido durante su vida, su trabajo ha sido muy influyente en la literatura y la cultura popular posteriores. Falleció el 15 de marzo de 1937, a la edad de 46 años, debido a un cáncer intestinal.
+            A pesar de que Lovecraft no fue muy reconocido durante su vida, su trabajo ha sido muy influyente en la
+            literatura y la cultura popular posteriores. Falleció el 15 de marzo de 1937, a la edad de 46 años, debido a
+            un cáncer intestinal.
         </p>
-    </section>
+    </main>
     <article>
-        <iframe  class="iframeBiografia" width="560" height="315" src="https://www.youtube.com/embed/bNRisSEh1kM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+        <iframe class="iframeBiografia" width="560" height="315" src="https://www.youtube.com/embed/bNRisSEh1kM"
+            title="YouTube video player" frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
     </article>
 
     <footer class="footer">
         <div class="botonSubir">
             <a class="boton-subir" href="#subir">Ir Arriba</a>
         </div>
-        
+
         <div class="redes">
-            <a class="redes-boton" href="https://twitter.com/" target="_blank"><img src="../img/logotwt.jpg" alt="Dirigirse a Twitter"></a>
-            <a class="redes-boton" href="https://youtube.com/" target="_blank"><img src="../img/logoyoutube.jpg" alt="Dirigirse a Youtube"></a>
-            <a class="redes-boton" href="https://instagram.com/" target="_blank"><img src="../img/loginst.jpg" alt="Dirigirse a Instagram"></a>
+            <a class="redes-boton" href="https://twitter.com/" target="_blank"><img src="../img/logotwt.jpg"
+                    alt="Dirigirse a Twitter"></a>
+            <a class="redes-boton" href="https://youtube.com/" target="_blank"><img src="../img/logoyoutube.jpg"
+                    alt="Dirigirse a Youtube"></a>
+            <a class="redes-boton" href="https://instagram.com/" target="_blank"><img src="../img/loginst.jpg"
+                    alt="Dirigirse a Instagram"></a>
         </div>
         <h3 class="derechos">Martin Muñoz © 2023. Todos los derechos reservados.</h3>
-    
+
     </footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
