--- a/pages/libros.html
+++ b/pages/libros.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/cthukhulog.jpg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <title>Libros de H. P. Lovecraft</title>
 </head>
+
 <body>
     <header class="header" id="subir">
         <a href="../index.html">
@@ -20,149 +23,160 @@
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
                 <a class="navbar-brand" href="../index.html">H.P Lovecraft</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="navbar-nav">
-                    <a class= "nav-link" href="../index.html">Inicio</a>
-                    <a class= "nav-link" href="biografia.html">Biografía</a>
-                    <a class= "nav-link" href="libros.html">Libros</a>
-                    <a class= "nav-link" href="bestiario.html">Bestiario</a>
-                    <a class= "nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                        <a class="nav-link" href="biografia.html">Biografía</a>
+                        <a class="nav-link" href="libros.html">Libros</a>
+                        <a class="nav-link" href="bestiario.html">Bestiario</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </div>
                 </div>
             </div>
-            </nav>
+        </nav>
     </header>
 
-    <section class="mainLibros">
+    <main class="mainLibros">
         <h1 class="librosTitulo">Libros</h1>
         <p>
-            Howard Phillips Lovecraft escribió numerosos relatos y novelas cortas de horror y ciencia ficción durante su carrera. A continuación, te presento una lista de algunos de sus libros más conocidos:
+            Howard Phillips Lovecraft escribió numerosos relatos y novelas cortas de horror y ciencia ficción durante su
+            carrera. A continuación, te presento una lista de algunos de sus libros más conocidos:
         </p>
-    <section class="section-card">
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro1.jpg" class="card-img-top" alt="portada El horror de Dunwich">
-            <div class="card-body">
-            <h5 class="card-title">El horror de Dunwich</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+        <section class="section-card">
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro1.jpg" class="card-img-top" alt="portada El horror de Dunwich">
+                <div class="card-body">
+                    <h5 class="card-title">El horror de Dunwich</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro2.jpg" class="card-img-top" alt="portada En las montañas de la locura">
-            <div class="card-body">
-            <h5 class="card-title">En las montañas de la locura</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro2.jpg" class="card-img-top" alt="portada En las montañas de la locura">
+                <div class="card-body">
+                    <h5 class="card-title">En las montañas de la locura</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro3.jpg" class="card-img-top" alt="portada La sombra sobre Innsmouth">
-            <div class="card-body">
-            <h5 class="card-title">La sombra sobre Innsmouth</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro3.jpg" class="card-img-top" alt="portada La sombra sobre Innsmouth">
+                <div class="card-body">
+                    <h5 class="card-title">La sombra sobre Innsmouth</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro4.jpg" class="card-img-top" alt="portada La llamada de Cthulhu">
-            <div class="card-body">
-            <h5 class="card-title">La llamada de Cthulhu</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro4.jpg" class="card-img-top" alt="portada La llamada de Cthulhu">
+                <div class="card-body">
+                    <h5 class="card-title">La llamada de Cthulhu</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro5.jpg" class="card-img-top" alt="portada Los mitos de Cthulhu">
-            <div class="card-body">
-            <h5 class="card-title">Los mitos de Cthulhu</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro5.jpg" class="card-img-top" alt="portada Los mitos de Cthulhu">
+                <div class="card-body">
+                    <h5 class="card-title">Los mitos de Cthulhu</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro6.jpg" class="card-img-top" alt="portada El color que cayó del espacio">
-            <div class="card-body">
-            <h5 class="card-title">El color que cayó del espacio</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro6.jpg" class="card-img-top" alt="portada El color que cayó del espacio">
+                <div class="card-body">
+                    <h5 class="card-title">El color que cayó del espacio</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro7.jpg" class="card-img-top" alt="portada La música de Erich Zann">
-            <div class="card-body">
-            <h5 class="card-title">La música de Erich Zann</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro7.jpg" class="card-img-top" alt="portada La música de Erich Zann">
+                <div class="card-body">
+                    <h5 class="card-title">La música de Erich Zann</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro8.jpg" class="card-img-top" alt="portada La extraña casa alta en la niebla">
-            <div class="card-body">
-            <h5 class="card-title">La extraña casa alta en la niebla</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro8.jpg" class="card-img-top" alt="portada La extraña casa alta en la niebla">
+                <div class="card-body">
+                    <h5 class="card-title">La extraña casa alta en la niebla</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro9.jpg" class="card-img-top" alt="portada El caso de Charles Dexter Ward">
-            <div class="card-body">
-            <h5 class="card-title">El caso de Charles Dexter Ward</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro9.jpg" class="card-img-top" alt="portada El caso de Charles Dexter Ward">
+                <div class="card-body">
+                    <h5 class="card-title">El caso de Charles Dexter Ward</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro10.jpg" class="card-img-top" alt="portada El que susurra en la oscuridad">
-            <div class="card-body">
-            <h5 class="card-title">El que susurra en la oscuridad</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro10.jpg" class="card-img-top" alt="portada El que susurra en la oscuridad">
+                <div class="card-body">
+                    <h5 class="card-title">El que susurra en la oscuridad</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro11.jpg" class="card-img-top" alt="portada Herbert West, reanimador">
-            <div class="card-body">
-            <h5 class="card-title">Herbert West, reanimador</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro11.jpg" class="card-img-top" alt="portada Herbert West, reanimador">
+                <div class="card-body">
+                    <h5 class="card-title">Herbert West, reanimador</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro12.jpg" class="card-img-top" alt="portada El modelo de Pickman">
-            <div class="card-body">
-            <h5 class="card-title">El modelo de Pickman</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro12.jpg" class="card-img-top" alt="portada El modelo de Pickman">
+                <div class="card-body">
+                    <h5 class="card-title">El modelo de Pickman</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro13.jpg" class="card-img-top" alt="portada La búsqueda onírica de la desconocida Kadath">
-            <div class="card-body">
-            <h5 class="card-title">La búsqueda onírica de Kadath</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro13.jpg" class="card-img-top"
+                    alt="portada La búsqueda onírica de la desconocida Kadath">
+                <div class="card-body">
+                    <h5 class="card-title">La búsqueda onírica de Kadath</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
-        <div class="card" style="width: 15rem;">
-            <img src="../img/libro14.jpg" class="card-img-top" alt="portada El horror de Red Hook">
-            <div class="card-body">
-            <h5 class="card-title">El horror de Red Hook</h5>
-                <a href="#" class="btn btn-primary">Comprar</a>
+            <div class="card" style="width: 15rem;">
+                <img src="../img/libro14.jpg" class="card-img-top" alt="portada El horror de Red Hook">
+                <div class="card-body">
+                    <h5 class="card-title">El horror de Red Hook</h5>
+                    <a href="#" class="btn btn-primary">Comprar</a>
+                </div>
             </div>
-        </div>
 
-    </section>    
-
-
-        <p>Cabe mencionar que Lovecraft también escribió numerosos relatos cortos, algunos de los cuales fueron publicados en revistas pulp. Muchos de estos relatos también son muy recomendables para los amantes del género de horror y ciencia ficción.</p>
-    </section>
+        </section>
 
 
+        <p>Cabe mencionar que Lovecraft también escribió numerosos relatos cortos, algunos de los cuales fueron
+            publicados en revistas pulp. Muchos de estos relatos también son muy recomendables para los amantes del
+            género de horror y ciencia ficción.</p>
+    </main>
 
 
-<footer class="footer">
-    <div class="botonSubir">
-        <a class="boton-subir" href="#subir">Ir Arriba</a>
-    </div>
-    
-    <div class="redes">
-        <a class="redes-boton" href="https://twitter.com/" target="_blank"><img src="../img/logotwt.jpg" alt="Dirigirse a Twitter"></a>
-        <a class="redes-boton" href="https://youtube.com/" target="_blank"><img src="../img/logoyoutube.jpg" alt="Dirigirse a Youtube"></a>
-        <a class="redes-boton" href="https://instagram.com/" target="_blank"><img src="../img/loginst.jpg" alt="Dirigirse a Instagram"></a>
-    </div>
-    <h3 class="derechos">Martin Muñoz © 2023. Todos los derechos reservados.</h3>
 
-</footer>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+
+    <footer class="footer">
+        <div class="botonSubir">
+            <a class="boton-subir" href="#subir">Ir Arriba</a>
+        </div>
+
+        <div class="redes">
+            <a class="redes-boton" href="https://twitter.com/" target="_blank"><img src="../img/logotwt.jpg"
+                    alt="Dirigirse a Twitter"></a>
+            <a class="redes-boton" href="https://youtube.com/" target="_blank"><img src="../img/logoyoutube.jpg"
+                    alt="Dirigirse a Youtube"></a>
+            <a class="redes-boton" href="https://instagram.com/" target="_blank"><img src="../img/loginst.jpg"
+                    alt="Dirigirse a Instagram"></a>
+        </div>
+        <h3 class="derechos">Martin Muñoz © 2023. Todos los derechos reservados.</h3>
+
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
