--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
-    <title>H.P. Lovecraft</title>
+    <meta name="description" content="Adéntrate en el mundo de H.P. Lovecraft y descubre el terror y la genialidad literaria que lo convirtieron en un maestro del género.">
+    <meta name="keywords" content="H.P. Lovecraft, Cthulhu, Horror cósmico, Necronomicón, Los Mitos de Lovecraft, Literatura gótica, Providence, Arkham, Relatos cortos">
+    <title>H.P. Lovecraft | Inicio</title>
 </head>
 
 <body>
@@ -46,8 +48,8 @@
             </div>
             <div class="col-12 col-md-6 hijo-index">
                 <h1 class="index-h1">H. P. Lovecraft</h1>
-                <p class="index-parrafos">Howard Phillips Lovecraft (1890-1937) fue un escritor estadounidense conocido
-                    por su estilo de terror cósmico, que se enfoca en la idea de que la humanidad es insignificante y
+                <p class="index-parrafos"><strong>Phillips Lovecraft</strong> (1890-1937) <em>fue un escritor estadounidense conocido
+                    por su estilo de terror cósmico</em>, que se enfoca en la idea de que la humanidad es insignificante y
                     vulnerable frente a la vastedad y hostilidad del universo. Lovecraft creó un universo ficticio lleno
                     de monstruos, dioses antiguos y cultos secretos, que ha inspirado a numerosos escritores y artistas.
                     Sus obras más conocidas incluyen "El llamado de Cthulhu", "En las montañas de la locura" y "El
