--- a/pages/bestiario.html
+++ b/pages/bestiario.html
@@ -12,7 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
-    <title>BESTIARIO</title>
+    <meta name="description" content="Descubre aterradores monstruos ancestrales en las oscuras obras de H.P. Lovecraft. Sumérgete en el horror cósmico y despierta tus peores pesadillas.">
+    <meta name="keywords" content="H.P. Lovecraft, Cthulhu, Horror cósmico, Necronomicón, Los Mitos de Lovecraft, Literatura gótica, Providence, Arkham, Relatos cortos">
+    <title>Lovecraft | Bestiario</title>
 </head>
 
 <body>
@@ -40,7 +42,7 @@
         </nav>
     </header>
     <main class="bestiario">
-        <h1>Bestiario de H. P. Lovecraft</h1>
+        <h1 class="tituloBestiario">Bestiario de H. P. Lovecraft</h1>
         <h2>Primigenios</h2>
         <p>Los Primigenios son criaturas antiguas y poderosas adoradas por cultos humanos degenerados. Muchos de ellos
             están constituídos por sustancias extra-terrestres y poseen propiedades que no coinciden con las de la
