--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -12,7 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
-    <title>Contacto</title>
+    <meta name="description" content="Contáctanos para respuestas rápidas. Nuestro equipo está listo para ayudarte. ¡Ponte en contacto!">
+    <meta name="keywords" content="H.P. Lovecraft, Cthulhu, Horror cósmico, Necronomicón, Los Mitos de Lovecraft, Literatura gótica, Providence, Arkham, Relatos cortos">
+    <title>Lovecraft | Contacto</title>
 </head>
 
 <body>
@@ -40,7 +42,7 @@
         </nav>
     </header>
     <main class="contacto">
-        <h1>Contacto</h1>
+        <h1 class="contactoTitulo">Contacto</h1>
         <p class="parrafo-contacto">Dejanos tus comentarios y/o sujerencias</p>
 
         <form class="formulario-contacto">
