--- a/pages/libros.html
+++ b/pages/libros.html
@@ -12,7 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
-    <title>Libros de H. P. Lovecraft</title>
+    <meta name="description" content="Explora los inquietantes relatos de H.P. Lovecraft, maestro del terror cósmico. Sumérgete en un universo de misterio y horrores indescriptibles...">
+    <meta name="keywords" content="H.P. Lovecraft, Cthulhu, Horror cósmico, Necronomicón, Los Mitos de Lovecraft, Literatura gótica, Providence, Arkham, Relatos cortos">
+    <title>Lovecraft | Libros</title>
 </head>
 
 <body>
