--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -12,7 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
-    <title>Biografía de H. P. Lovecraft</title>
+    <meta name="description" content="Sumérgete en los horrores cósmicos y la mente perturbada del maestro del terror, H.P. Lovecraft, en su vida y obras tenebrosas.">
+    <meta name="keywords" content="H.P. Lovecraft, Cthulhu, Horror cósmico, Necronomicón, Los Mitos de Lovecraft, Literatura gótica, Providence, Arkham, Relatos cortos">
+    <title>Lovecraft | Biografía</title>
 </head>
 
 <body>
