--- a/pages/libros.html
+++ b/pages/libros.html
@@ -6,14 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../img/cthukhulog.jpg" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap" rel="stylesheet">
     <meta name="description" content="Explora los inquietantes relatos de H.P. Lovecraft, maestro del terror cósmico. Sumérgete en un universo de misterio y horrores indescriptibles...">
-    <meta name="keywords" content="H.P. Lovecraft, Cthulhu, Horror cósmico, Necronomicón, Los Mitos de Lovecraft, Literatura gótica, Providence, Arkham, Relatos cortos">
+    <meta name="keywords" content="H.P. Lovecraft, Libros en venta, Libros Lovecraft, Literatura gótica en venta, lovecraft ventas, terror, Necronomicón, pagina de libros lovecraft">
+    <link rel="stylesheet" href="../css/styles.css">
     <title>Lovecraft | Libros</title>
 </head>
 
@@ -173,8 +172,11 @@
             <a class="redes-boton" href="https://instagram.com/" target="_blank"><img src="../img/loginst.jpg"
                     alt="Dirigirse a Instagram"></a>
         </div>
-        <h3 class="derechos">Martin Muñoz © 2023. Todos los derechos reservados.</h3>
-
+        <div>
+            <p>
+        <span class="derechos">Martin Muñoz © 2023. Todos los derechos reservados.</span>
+            </p>
+        </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
